# OpenLearn-Admin

./: .gitignore  CHANGELOG.md  README.md  fix_handler.py  fix_test.py  fix_test_settings.py  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pr_description.md  pr_details.md  stitch_screen.html  stitch_screen_updated.html  tsconfig.json  update_lib.py  update_page.py  vitest.config.ts
.Jules/: bolt.md  palette.md
.github/workflows/: release.yml  release_linux_only.yml  release_only_windows.yml
.jules/: bolt.md
.planning/: ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/quick/260421-platform-services/: README.md
.planning/quick/260421-r1p-gbm-buffer/: 260421-r1p-PLAN.md  260421-r1p-SUMMARY.md
.planning/quick/260421-rjo-clone/: 260421-rjo-PLAN.md  260421-rjo-SUMMARY.md
.planning/quick/260421-rnc-changelog/: 260421-rnc-PLAN.md  260421-rnc-SUMMARY.md
.planning/quick/260421-tsv-changelog/: 260421-tsv-PLAN.md  260421-tsv-SUMMARY.md
.planning/quick/260421-u72-git/: 260421-u72-PLAN.md  260421-u72-SUMMARY.md
assets-windows/: 初始化数据库.bat  启动.bat  安装环境.bat
assets-windows/LearnSite/: web.config
assets-windows/MyWebServer/: Config.ini
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/resources/nodejs/: node-v24.15.0-x64.msi
src-tauri/src/: lib.rs
src/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
src/components/: GlobalProgress.tsx
src/lib/: git.test.ts  git.ts  sys.ts
(+45 files in other folders)
