[package]
name = "app"
version = "0.2.16"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
chrono = "0.4"
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"] }
sysinfo = "0.36.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
